[gd_scene load_steps=5 format=3 uid="uid://buap177hs2q6p"]

[ext_resource type="Script" uid="uid://cjat3bbn4qvqs" path="res://character_body_2d.gd" id="1_pjt0s"]
[ext_resource type="Texture2D" uid="uid://cj6i6v7ep4mua" path="res://icon.svg" id="2_wa5vi"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ni31j"]
radius = 9.0
height = 39.75

[sub_resource type="CircleShape2D" id="CircleShape2D_73fnb"]

[node name="CharacterBody2D" type="CharacterBody2D"]
motion_mode = 1
script = ExtResource("1_pjt0s")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -14.665)
shape = SubResource("CapsuleShape2D_ni31j")

[node name="Unit" type="Sprite2D" parent="."]
position = Vector2(0, -14.475)
scale = Vector2(0.13000001, 0.28500003)
texture = ExtResource("2_wa5vi")

[node name="AreaSendor" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaSendor"]
shape = SubResource("CircleShape2D_73fnb")

[connection signal="tree_entered" from="." to="." method="_on_tree_entered"]
[connection signal="area_entered" from="AreaSendor" to="." method="_on_area_sendor_area_entered"]
[connection signal="area_exited" from="AreaSendor" to="." method="_on_area_sendor_area_exited"]
